# ambientmeta-pii-detection-benchmark

./: .gitignore  LICENSE  README.md  pyproject.toml  run_benchmark.py
adapters/: __init__.py  ambientmeta.py  base.py  presidio.py  regex_only.py  spacy_ner.py
data/: README.md
data/adversarial/: adversarial_cases.jsonl  metadata.json
data/ambiguous/: ambiguous_spans.jsonl  metadata.json
data/contextual/: contextual_detection.jsonl  metadata.json
data/standard/: metadata.json  standard_entities.jsonl
docs/: app.js  index.html  style.css
metrics/: __init__.py  context_sensitivity.py  core.py  latency.py
results/: latest.json
results/historical/: results_20260319_224414.json  results_20260319_224504.json  results_20260319_225653.json  results_20260319_225741.json  results_20260319_225754.json  results_20260319_225828.json  results_20260319_225920.json  results_20260319_232243.json  results_20260320_013949.json  results_20260320_021030.json  results_20260320_025716.json  results_20260320_031224.json  results_20260320_031304.json  results_20260320_032946.json  results_20260320_042631.json  results_20260320_052851.json  results_20260320_114516.json  results_20260320_121822.json  results_20260322_131104.json  results_20260322_165249.json  results_20260322_170139.json  results_20260322_182257.json  results_20260322_184534.json  results_20260322_185403.json  results_20260322_192014.json  results_20260322_222547.json  results_20260323_003018.json  results_20260323_003632.json  (+6 more)
scripts/: assemble_dataset.py  generate_tables.py  validate_dataset.py
