[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ambientmeta-pii-detection-benchmark"
version = "1.0.0"
description = "Benchmark for PII detection systems with context sensitivity scoring"
requires-python = ">=3.10"
license = "Apache-2.0"
readme = "README.md"

dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "rich>=13.0",
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "spacy>=3.7",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
site = ["jinja2"]

[tool.setuptools.packages.find]
include = ["adapters*", "metrics*", "scripts*"]

[tool.ruff]
line-length = 100
target-version = "py310"
